# rust-start

./: .gitignore  README.md
array_slices_vecs/: Cargo.toml
array_slices_vecs/src/: main.rs
first-app/: Cargo.toml
first-lib/: Cargo.toml
functional_features/src/: main.rs
functions_and_structures/: Cargo.toml
functions_and_structures/src/: main.rs
generic_types_and_traits/: Cargo.toml
generic_types_and_traits/src/: main.rs
near-smart-contract/: Cargo.toml
near-smart-contract/src/: lib.rs
options_results_error_handling/: Cargo.toml
options_results_error_handling/src/: main.rs
ownership_and_borowing/: Cargo.toml
ownership_and_borowing/src/: main.rs
testing/src/: main.rs
variables_mutability_and_scope/: Cargo.toml
variables_mutability_and_scope/src/: main.rs
