[package]
name = "near-smart-contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "4.0.0"
near-contract-standards = "4.0.0"

[dev-dependencies]
near-sdk-sim = "3.2.0"

[lib]
create-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
#Tell `rustc` to optimize for small code size
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true